--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h1>Hello! I'm He Min Yuan</h1>
         <h2>DREAM OF BECOME A FULL-STACK DEVELPER</h2>
         <div class="head-icon">
-            <a href="https://www.facebook.com/" target="_blank"><i class="icon ion-logo-facebook"></i></a>
-            <a href="https://www.instagram.com/?hl=zh-tw" target="_blank"><i class="icon ion-logo-instagram"></i></a>
+            <a href="https://www.facebook.com/PeterHmy7" target="_blank"><i class="icon ion-logo-facebook"></i></a>
+            <a href="https://www.instagram.com/bleach838" target="_blank"><i class="icon ion-logo-instagram"></i></a>
             <a href="https://github.com/Arachild" target="_blank"><i class="icon ion-logo-github"></i></a>
         </div>
     </section>
@@ -132,9 +132,9 @@
     </div>
     <section id="footer">
         <div class="footericon">
-            <a href="https://www.facebook.com/" target="_blank"><img src="images/iconfinder_facebook_circle_color_107175.png" alt="facebook" height="50px" width="50px" target="_blank"></a>
-            <a href="https://www.instagram.com/?hl=zh-tw" target="_blank"><img src="images/iconfinder_Instagram_191275.png" alt="instagram" height="50px" width="50px"></a>
-            <a href="#" target="_blank"><img src="images/iconfinder_github_social_media_connect_2553370.png" alt="" height="50px" width="50px"></a>
+            <a href="https://www.facebook.com/PeterHmy7" target="_blank"><img src="images/iconfinder_facebook_circle_color_107175.png" alt="facebook" height="50px" width="50px" target="_blank"></a>
+            <a href="https://www.instagram.com/bleach838" target="_blank"><img src="images/iconfinder_Instagram_191275.png" alt="instagram" height="50px" width="50px"></a>
+            <a href="https://github.com/Arachild" target="_blank"><img src="images/iconfinder_github_social_media_connect_2553370.png" alt="" height="50px" width="50px"></a>
             <div>
                 &#169; 2019 He Min Yuan.All rights reserved.
             </div>
