--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
-    <title>Jos's Resume</title>
+    <title>Peter's Resume</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/circle.css">
     <link rel="stylesheet" href="css/rwd.css">
