--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="introduce">
                 <p>
                     <h1>何敏源 Min Yuan He</h1>
-                    <p>2017年畢業於私立中原大學物理系，工作期間稍微接觸到WordPress平台覺得很有趣，再加上平時喜歡從事登山及水上活動。每一次的活動都有著不同的體驗與回憶，所以有了新的目標<em>建立一個屬於自己的網頁</em>，透過自己的雙手創作出屬於自己的網站並記錄分享這一切，也讓同好看到我的文章也能受益良多，因此我踏入了web領域。</p>
+                    <p>2017年畢業於私立中原大學物理系，工作期間因接觸到WordPress平台覺得很有趣，再加上平時喜歡從事登山及水上活動。每一次的活動都有著不同的體驗與回憶，所以有了新的目標<em>建立一個屬於自己的網頁</em>，透過自己的雙手創作出屬於自己的網站並記錄分享這一切，也能讓從事登山水上活動的同好看到我的文章也能受益良多，因此我踏入了web領域。</p>
                     <p>自從踏入前端的領域短短的兩個月，大量的資源讓自學的我遇到問題時能找到解決辦法，經歷不斷的撰寫Code提升自己的語法能力，也能從中發現問題點並加以改善，但我深知這只是前端領域小小的一部份，前端技術日新月異使得我必須不斷得學習，透過網路資源、書籍持續培養前端的能力，當我選擇踏入這個領域時，即是困難重重也得向前邁進，因為<em>逆境促使人成長</em>。</p>
                     <p>在未來網路是不可或缺的科技，在畢業後這幾年慢慢地碰到前端技術，慢慢地了解到網頁，發現新的領域就跟海一樣一望無際，新技術不斷的誕生讓工程師更方便的撰寫，如何去從這片海中抓住趨勢重點學習，並持續地吸收新知識，唯有不斷的努力、不斷的奮鬥才會有所收穫及成長，希望自己在未來能成為<em>Full Stack Develper。</em></p>
                     <p class="goodsentence">對於新的事物充滿著好奇心，渴望能學習這一切並加以應用在生活上。「人生就是不停的戰鬥」</p>
@@ -63,9 +63,9 @@
             <div class="title">Experience</div>
             <div class="educationcontent">
                 <h2>鉅鑫電信工程有限公司/工程師<span>2017/10~2018/04</span></h2>
-                <p>畢業後的第一份工作，當時的我秉持著甚麼都學就去學的精神接下了這份工作，工作內容則是負責安裝電話、網路、網路電視等弱電工作，一開始的跟班學習都很順利，當我獨立出班跑Case時才意識到<em>'看'跟'做'</em>是兩回事，在實戰過後才更加了解到硬實力是經過<em>不斷的訓練、實作及經驗</em>慢慢堆起的。</p>
+                <p>畢業後的第一份工作，當時的我秉持著甚麼都學就去學的精神接下了這份工作，工作內容則是負責安裝電話、網路、網路電視等弱電工作，一開始的跟班學習都很順利，當我獨立出班跑Case時才意識到<em>'看'跟'做'</em>完全兩回事，在實戰過後才更加了解到硬實力是經過<em>不斷的訓練、實作及經驗</em>慢慢堆起的。</p>
                 <h2>德宣有限公司/品管人員<span>2018/04~2019/04</span></h2>
-                <p>踏入傳產的領域，對我來說可說是一項挑戰，在這裡必須要有<em>隨時隨地的應變突發狀況</em>，身為生產者<em>必須隨時克服生產時所出現的問題</em>，不管是對產品還是機器都要有一定的了解，身為品管者<em>必須統計產品不良狀況、分析原因並做出適當的處理</em>>，再將其記錄並製作、改善生產標準流程,在新產品研發上不斷做出改良,提升<em>產率</em>、<em>良率</em>。</p>
+                <p>踏入傳產的領域，對我來說可說是一項挑戰，在這裡必須要有<em>隨時隨地的應變突發狀況</em>，身為生產者<em>必須隨時克服生產時所出現的問題</em>，不管是對產品還是機器都要有一定的了解，身為品管者<em>必須統計產品不良狀況、分析原因並做出適當的處理</em>，再將其記錄並製作、改善生產標準流程,在新產品研發上不斷做出改良,提升<em>產率</em>、<em>良率</em>。</p>
             </div>
         </div>
     </section>
