--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="introduce">
                 <p>
-                    <h1>何敏源 Min Yuan He</h1>
+                    <h1>何敏源 He Min Yuan</h1>
                     <p>2017年畢業於私立中原大學物理系，工作期間因接觸到WordPress平台覺得很有趣，再加上平時喜歡從事登山及水上活動。每一次的活動都有著不同的體驗與回憶，所以有了新的目標<em>建立一個屬於自己的網頁</em>，透過自己的雙手創作出屬於自己的網站並記錄分享這一切，也能讓從事登山水上活動的同好看到我的文章也能受益良多，因此我踏入了web領域。</p>
                     <p>自從踏入前端的領域短短的兩個月，大量的資源讓自學的我遇到問題時能找到解決辦法，經歷不斷的撰寫Code提升自己的語法能力，也能從中發現問題點並加以改善，但我深知這只是前端領域小小的一部份，前端技術日新月異使得我必須不斷得學習，透過網路資源、書籍持續培養前端的能力，當我選擇踏入這個領域時，即是困難重重也得向前邁進，因為<em>逆境促使人成長</em>。</p>
                     <p>在未來網路是不可或缺的科技，在畢業後這幾年慢慢地碰到前端技術，慢慢地了解到網頁，發現新的領域就跟海一樣一望無際，新技術不斷的誕生讓工程師更方便的撰寫，如何去從這片海中抓住趨勢重點學習，並持續地吸收新知識，唯有不斷的努力、不斷的奮鬥才會有所收穫及成長，希望自己在未來能成為<em>Full Stack Develper。</em></p>
