--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                 &#169; 2019 He Min Yuan.All rights reserved.
             </div>
     </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/fixbar.js"></script>
     <!--固定bar-->
 </body>
