--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
     </div>
     <!--content-->
     <section id="content1">
-        <div id="profile">
-            <h3>Profile</h3>
-        </div>
+        <h3 id="profile">Profile</h3>
         <div class="content1flex">
             <div class="photostickers">
                 <img src="images/photostickers.JPG" alt="photosticker">
@@ -141,7 +139,6 @@
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/fixbar.js"></script>
-    <!--固定bar-->
 </body>
 
 </html>
