--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/circle.css">
     <link rel="stylesheet" href="css/rwd.css">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 
 <body>
@@ -35,10 +36,10 @@
     <section id="content1">
         <h3 id="profile">Profile</h3>
         <div class="content1flex">
-            <div class="photostickers">
-                <img src="images/photostickers.JPG" alt="photosticker">
+            <div class="photostickers js--wp-1">
+                <img src="images/photostickers.JPG" alt="photosticker" >
             </div>
-            <div class="introduce">
+            <div class="introduce js--wp-2">
                 <p>
                     <h1>何敏源 He Min Yuan</h1>
                     <p>2017年畢業於私立中原大學物理系，工作期間因接觸到WordPress平台覺得很有趣，再加上平時喜歡從事登山及水上活動。每一次的活動都有著不同的體驗與回憶，所以有了新的目標<em>建立一個屬於自己的網頁</em>，透過自己的雙手創作出屬於自己的網站並記錄分享這一切，也能讓從事登山水上活動的同好看到我的文章也能受益良多，因此我踏入了web領域。</p>
@@ -50,14 +51,14 @@
     </section>
     <section id="content2">
         <h3 id="resume">Resume</h3>
-        <div class="education">
+        <div class="education js--wp-3">
             <div class="title">Education</div>
             <div class="educationcontent">
                 <h2>私立中原大學物理系</h2>
                 <p>在大學期間，擔任了一年社團幹部-教學長，在這一年裡獲得了許多在課業上學不到的經驗，而這些經驗來自於舉辦社團活動，每一次的活動都會經歷不一樣的經驗，但唯一不變的就是<em>「團隊合作」</em>，一個成功的活動背後一定有個好的團隊，總召副召則是在團隊中扮演著重要的腳色，在開會中我都會先聆聽整個會議的重點加以思考並給予適當的建議，但如果我是總副召我會事先在開會前將重點整理出來，在與團隊討論並決策，不管在團隊中是當任總副召或是其他職位，我總是秉持一個原則<em>「盡我所能去完成每一件事情」</em>，而活動不管結果如何，最重要的是在整個活動中所經歷的。 在發生問題時找出問題點並加以解決，<em>沒有捷徑唯有不斷的練習不斷的嘗試才能讓自己成長</em>。</p>
             </div>
         </div>
-        <div class="experience">
+        <div class="experience js--wp-3">
             <div class="title">Experience</div>
             <div class="educationcontent">
                 <h2>鉅鑫電信工程有限公司/工程師<span>2017/10~2018/04</span></h2>
@@ -138,6 +139,9 @@
             </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/noframework.waypoints.min.js"></script>
+    <script src="js/waypoints.debug.js"></script>
     <script src="js/fixbar.js"></script>
 </body>
 
