--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h3 id="profile">Profile</h3>
         <div class="content1flex">
             <div class="photostickers js--wp-1">
-                <img src="images/photostickers.JPG" alt="photosticker" >
+                <img src="images/photostickers-min.JPG" alt="photosticker" >
             </div>
             <div class="introduce js--wp-2">
                 <p>
