--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--head-->
     <section id="header">
         <h1>Hello! I'm He Min Yuan</h1>
-        <h2>DREAM TO BECOME A FULL-STACK DEVELPER</h2>
+        <h2>DREAM TO BECOME A FULL-STACK DEVELOPER</h2>
         <div class="head-icon">
             <a href="https://www.facebook.com/PeterHmy7" target="_blank"><i class="icon ion-logo-facebook"></i></a>
             <a href="https://www.instagram.com/bleach838" target="_blank"><i class="icon ion-logo-instagram"></i></a>
